--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header>
             <div class="top-right-links">
                 <a href="https://github.com/apon06" target="_blank" rel="noopener noreferrer">My GitHub</a>
-                <a href="git remote add origin https://github.com/apon06/github-profile.git" target="_blank" rel="noopener noreferrer">Project
+                <a href="https://github.com/apon06/github-profile.git" target="_blank" rel="noopener noreferrer">Project
                     Repo</a>
             </div>
             <h1>GitHub User Profile Viewer</h1>
