--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <a href="https://github.com/apon06" target="_blank" rel="noopener noreferrer">My GitHub</a>
                 <a href="https://github.com/apon06/github-profile.git" target="_blank" rel="noopener noreferrer">Project
                     Repo</a>
+                <label class="theme-switch">
+                    <input type="checkbox" id="theme-toggle">
+                    <span class="slider"></span>
+                </label>
             </div>
             <h1>GitHub User Profile Viewer</h1>
         </header>
