profile image click to navigate github profile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 </head>
 
 <body>
-
     <main>
         <header>
             <div class="top-right-links">
@@ -46,7 +45,9 @@
         </section>
 
         <section id="profile-container">
-            <img id="avatar" alt="GitHub user avatar" />
+            <a id="profile-link" href="#" target="_blank" rel="noopener noreferrer">
+                <img id="avatar" alt="GitHub user avatar" />
+            </a>
             <h2 id="name"></h2>
             <p id="bio"></p>
 
@@ -63,10 +64,8 @@
 
                 <p align="center">
                     <a href="https://github.com/ryo-ma/github-profile-trophy" target="_blank" rel="noopener noreferrer">
-                        <img id="trophy" src="" alt="GitHub profile trophy" />
-                    </a>
+                        <img id="trophy" src="" alt="GitHub profile trophy" /> </a>
                 </p>
-
                 <div class="stats-images">
                     <img id="top-langs" alt="Most used languages on GitHub" />
                     <img id="stats" alt="GitHub user statistics" />
@@ -76,11 +75,10 @@
         </section>
 
         <footer>
-            Developed by Apon Ahmed
+            <p>Developed by Apon</p>
         </footer>
+        <script src="script.js"></script>
     </main>
-
-    <script src="script.js"></script>
 
 </body>
 
