click to navigate

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </section>
 
         <footer>
-            <p>Developed by Apon</p>
+            <p>Developed by <a href="https://github.com/apon06" target="_blank" rel="noopener noreferrer">Apon</a></p>
         </footer>
         <script src="script.js"></script>
     </main>
